--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 09:24:00 AM</p>
+    <p class="lastupdate">09/08/2020 09:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">72.2&#176;F</td>
+        <td class="data">72.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">72.2&#176;F</td>
+        <td class="data">72.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">72.2&#176;F</td>
+        <td class="data">72.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.7&#176;F</td>
+        <td class="data">49.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">45%</td>
+        <td class="data">44%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.635 inHg (0.022)</td>
+        <td class="data">29.635 inHg (0.021)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.2&#176;F</td>
+        <td class="data">78.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:23:52 AM">
-            49.7</span><br/>
+          <span title="09:27:26 AM">
+            49.9</span><br/>
           <span title="06:45:27 AM">
             44.4</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 18 hours, 37 minutes</td>
+      <td class="data">6 days, 18 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 18 hours, 37 minutes</td>
+      <td class="data">6 days, 18 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
