--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 10:24:00 AM</p>
+    <p class="lastupdate">09/08/2020 10:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">77.2&#176;F</td>
+        <td class="data">77.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">77.2&#176;F</td>
+        <td class="data">77.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">77.2&#176;F</td>
+        <td class="data">77.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.3&#176;F</td>
+        <td class="data">50.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.625 inHg (0.006)</td>
+        <td class="data">29.626 inHg (0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.8&#176;F</td>
+        <td class="data">79.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,7 +235,7 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:21:26 AM">
+          <span title="10:28:46 AM">
             50.8</span><br/>
           <span title="06:45:27 AM">
             44.4</span>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 19 hours, 37 minutes</td>
+      <td class="data">6 days, 19 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 19 hours, 37 minutes</td>
+      <td class="data">6 days, 19 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
