--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 08:44:00 PM</p>
+    <p class="lastupdate">09/08/2020 08:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.5&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">55%</td>
+        <td class="data">56%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.645 inHg (0.068)</td>
+        <td class="data">29.649 inHg (0.070)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph S (180&#176;)</td>
+        <td class="data">4 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.3&#176;F</td>
+        <td class="data">79.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">42%</td>
       </tr>
     </tbody>
   </table>
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="08:20:03 PM">
-            41</span><br/>
+          <span title="08:48:03 PM">
+            42</span><br/>
           <span title="12:07:01 AM">
             28</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="08:41:02 AM (Monday)">
-            41</span><br/>
+          <span title="08:48:03 PM (Tuesday)">
+            42</span><br/>
           <span title="12:07:01 AM (Tuesday)">
             28</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 5 hours, 57 minutes</td>
+      <td class="data">7 days, 6 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 5 hours, 57 minutes</td>
+      <td class="data">7 days, 6 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
