--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 08:44:00 PM</p>
+    <p class="lastupdate">09/08/2020 08:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -396,14 +396,14 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            41<br/>
-            <span class="timestamp">08:20:03 PM</span><br/>
+            42<br/>
+            <span class="timestamp">08:48:03 PM</span><br/>
             28<br/>
             <span class="timestamp">12:07:01 AM</span>
           </td>
           <td class="data new_row">
-            41<br/>
-            <span class="timestamp">08:41:02 AM (Monday)</span><br/>
+            42<br/>
+            <span class="timestamp">08:48:03 PM (Tuesday)</span><br/>
             28<br/>
             <span class="timestamp">12:07:01 AM (Tuesday)</span>
           </td>
