--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 10:44:00 PM</p>
+    <p class="lastupdate">09/08/2020 10:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.8&#176;F</td>
+        <td class="data">65.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.8&#176;F</td>
+        <td class="data">65.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.8&#176;F</td>
+        <td class="data">65.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.3&#176;F</td>
+        <td class="data">54.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">64%</td>
+        <td class="data">67%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.696 inHg (0.087)</td>
+        <td class="data">29.694 inHg (0.084)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="10:36:07 PM">
-            65</span><br/>
+          <span title="10:48:57 PM">
+            67</span><br/>
           <span title="01:21:46 PM">
             18</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:36:07 PM (Tuesday)">
-            65</span><br/>
+          <span title="10:48:57 PM (Tuesday)">
+            67</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="10:42:03 PM">
-            29.697</span><br/>
+          <span title="10:45:03 PM">
+            29.699</span><br/>
           <span title="03:40:02 PM">
             29.560</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 7 hours, 57 minutes</td>
+      <td class="data">7 days, 8 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 7 hours, 57 minutes</td>
+      <td class="data">7 days, 8 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
