--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 12:54:00 AM</p>
+    <p class="lastupdate">09/09/2020 12:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">63.3&#176;F</td>
+        <td class="data">63.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">63.3&#176;F</td>
+        <td class="data">63.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">63.3&#176;F</td>
+        <td class="data">63.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.3&#176;F</td>
+        <td class="data">52.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">65%</td>
+        <td class="data">67%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.701 inHg (0.027)</td>
+        <td class="data">29.707 inHg (0.032)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.7&#176;F</td>
+        <td class="data">77.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="12:52:09 AM">
-            63.3</span>
+          <span title="12:56:47 AM">
+            63.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:52:09 AM" class="loval">
-            63.3</span>
+          <span title="12:56:47 AM" class="loval">
+            63.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:33:29 AM (Tuesday)" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:41 AM">
             53.3</span><br/>
-          <span title="12:52:09 AM">
-            51.3</span>
+          <span title="12:56:47 AM">
+            51.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">77%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 10 hours, 7 minutes</td>
+      <td class="data">7 days, 10 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 10 hours, 7 minutes</td>
+      <td class="data">7 days, 10 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
