--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 04:14:00 AM</p>
+    <p class="lastupdate">09/09/2020 04:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">59.1&#176;F</td>
+        <td class="data">59.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">59.1&#176;F</td>
+        <td class="data">59.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">59.1&#176;F</td>
+        <td class="data">59.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.2&#176;F</td>
+        <td class="data">50.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">75%</td>
+        <td class="data">74%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.736 inHg (0.028)</td>
+        <td class="data">29.737 inHg (0.026)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="04:10:51 AM">
-            59.1</span>
+          <span title="04:16:49 AM">
+            58.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="04:10:51 AM (Wednesday)">
-            59.1</span>
+          <span title="04:16:49 AM (Wednesday)">
+            58.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:10:51 AM" class="loval">
-            59.1</span>
+          <span title="04:16:49 AM" class="loval">
+            58.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:10:51 AM (Wednesday)" class="loval">
-            59.1</span>
+          <span title="04:16:49 AM (Wednesday)" class="loval">
+            58.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="01:05:37 AM">
             54.3</span><br/>
-          <span title="04:00:15 AM">
-            50.7</span>
+          <span title="04:18:39 AM">
+            50.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 13 hours, 27 minutes</td>
+      <td class="data">7 days, 13 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 13 hours, 27 minutes</td>
+      <td class="data">7 days, 13 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
