--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 05:59:00 AM</p>
+    <p class="lastupdate">09/09/2020 06:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.7&#176;F</td>
+        <td class="data">51.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">78%</td>
+        <td class="data">79%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.764 inHg (0.038)</td>
+        <td class="data">29.766 inHg (0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.9&#176;F</td>
+        <td class="data">74.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">45%</td>
+        <td class="data">44%</td>
       </tr>
     </tbody>
   </table>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:25:27 AM">
-            78</span><br/>
+          <span title="06:02:00 AM">
+            79</span><br/>
           <span title="12:00:01 AM">
             63</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:25:27 AM (Wednesday)">
-            78</span><br/>
+          <span title="06:02:00 AM (Wednesday)">
+            79</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="05:53:01 AM">
-            29.766</span><br/>
+          <span title="05:59:01 AM">
+            29.768</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          358
+          357
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 15 hours, 12 minutes</td>
+      <td class="data">7 days, 15 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 15 hours, 12 minutes</td>
+      <td class="data">7 days, 15 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
