--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 06:49:00 AM</p>
+    <p class="lastupdate">09/09/2020 06:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.791 inHg (0.057)</td>
+        <td class="data">29.789 inHg (0.054)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.0&#176;F</td>
+        <td class="data">73.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">44%</td>
+        <td class="data">45%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="06:45:15 AM">
-            56.7</span>
+          <span title="06:49:01 AM">
+            56.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="06:45:15 AM (Wednesday)">
-            56.7</span>
+          <span title="06:49:01 AM (Wednesday)">
+            56.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:45:15 AM" class="loval">
-            56.7</span>
+          <span title="06:49:01 AM" class="loval">
+            56.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:45:15 AM (Wednesday)" class="loval">
-            56.7</span>
+          <span title="06:49:01 AM (Wednesday)" class="loval">
+            56.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:41:27 AM">
-            80</span><br/>
+          <span title="06:51:33 AM">
+            81</span><br/>
           <span title="12:00:01 AM">
             63</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:41:27 AM (Wednesday)">
-            80</span><br/>
+          <span title="06:51:33 AM (Wednesday)">
+            81</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="06:48:01 AM">
-            29.791</span><br/>
+          <span title="06:52:01 AM">
+            29.792</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          354
+          355
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 16 hours, 2 minutes</td>
+      <td class="data">7 days, 16 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 16 hours, 2 minutes</td>
+      <td class="data">7 days, 16 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
