--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 07:04:00 AM</p>
+    <p class="lastupdate">09/09/2020 07:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.5&#176;F</td>
+        <td class="data">50.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">80%</td>
+        <td class="data">79%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.791 inHg (0.054)</td>
+        <td class="data">29.800 inHg (0.061)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph WSW (248&#176;)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.0&#176;F</td>
+        <td class="data">72.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="06:49:01 AM">
-            56.6</span>
+          <span title="07:08:29 AM">
+            56.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="06:49:01 AM (Wednesday)">
-            56.6</span>
+          <span title="07:08:29 AM (Wednesday)">
+            56.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:49:01 AM" class="loval">
-            56.6</span>
+          <span title="07:08:29 AM" class="loval">
+            56.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:49:01 AM (Wednesday)" class="loval">
-            56.6</span>
+          <span title="07:08:29 AM (Wednesday)" class="loval">
+            56.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="06:58:01 AM">
-            29.794</span><br/>
+          <span title="07:08:01 AM">
+            29.800</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          354
+          353
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          347
+          346
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:26:01 AM">
             78.1</span><br/>
-          <span title="07:03:01 AM">
-            73.0</span>
+          <span title="07:08:01 AM">
+            72.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
             91.8</span><br/>
-          <span title="07:03:01 AM (Wednesday)">
-            73.0</span>
+          <span title="07:08:01 AM (Wednesday)">
+            72.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 16 hours, 17 minutes</td>
+      <td class="data">7 days, 16 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 16 hours, 17 minutes</td>
+      <td class="data">7 days, 16 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
