--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 07:09:00 AM</p>
+    <p class="lastupdate">09/09/2020 07:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.2&#176;F</td>
+        <td class="data">51.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">79%</td>
+        <td class="data">83%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.800 inHg (0.061)</td>
+        <td class="data">29.794 inHg (0.058)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">3 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:51:33 AM">
-            81</span><br/>
+          <span title="07:13:45 AM">
+            83</span><br/>
           <span title="12:00:01 AM">
             63</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:51:33 AM (Wednesday)">
-            81</span><br/>
+          <span title="07:13:45 AM (Wednesday)">
+            83</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="07:08:01 AM">
-            29.800</span><br/>
+          <span title="07:11:01 AM">
+            29.803</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="04:50:15 AM">
-            4</span><br/>
-          336
+          <span title="07:12:59 AM">
+            9</span><br/>
+          30
         </td>
         <td class="data new_row hilo_week">
           <span title="04:31:00 PM (Monday)">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          353
+          355
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          346
+          347
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:26:01 AM">
             78.1</span><br/>
-          <span title="07:08:01 AM">
-            72.9</span>
+          <span title="07:11:01 AM">
+            72.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
             91.8</span><br/>
-          <span title="07:08:01 AM (Wednesday)">
-            72.9</span>
+          <span title="07:11:01 AM (Wednesday)">
+            72.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 16 hours, 22 minutes</td>
+      <td class="data">7 days, 16 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 16 hours, 22 minutes</td>
+      <td class="data">7 days, 16 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
